This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
3/8/17: Fixed transformations used in Navigator to account for tilted images;
basic navigation, polygon montages, and Realign to Item seem to work.

3/8/17: Added property BlankDuringTransients to make the program blank the
beam during magnification and spot size changes and lens normalizations to
keep the K2 from retracting due to beam transients (in 3.6).

3/8/17: Added a property KeepEFTEMstate to avoid switching in or out of EFTEM
when the program starts and exits (In 3.6).

3/8/17: Changed color of dose rate and camera name labels to be visible on
noise (In 3.6).

3/8/17: Made it draw navigator label unconditionally if point is more than 40
microns from previous one so labels still show up on low mag maps (In 3.6).

3/6/17: Implemented use of live mode for continous acquisition from DE cameras
and enabled acquisition of normalized images from server.

3/5/17: Fixed taking tilt angle and stage position from buffer if available
when making a montage map (In 3.6).

3/3/17: Gave proper error message if BackgroundTilt is used without the
property set to open a fourth socket (In 3.6).

3/3/17: Fixed changes in current directory from saving calibrations and
short-term calibrations (In 3.6).

3/2/17:SEM_3-6-3
3/2/17: Made it retry opening Falcon frame files since they may still be
locked for writing on the first attempt (In 3.6).

3/2/17: Made it retry once when there is a timeout during fast continuous
acquisition even if CameraRetries is 0.

3/2/17: Added output of aligned piece coordinates in montage overview to mdoc
file.

3/1/17: Make sure beam stays blanked except when acquiring for Realign to Item
when it goes out of Low Dose (In 3.6).

2/26/17: Added script command to wait until a specified time after midnight or